Lots of changes, refactoring and cleanup

--- a/views/index.pug
+++ b/views/index.pug
@@ -29,7 +29,7 @@ block content
 
 					div(class='form-group')
 						label(for='matchTypeSelect') Starting Score
-						select(class='form-control' name='matchType' id='matchTypeSelect')
+						select(class='form-control' name='startingScore' id='matchTypeSelect')
 							option 301
 							option(selected='selected') 501
 							option 701
