--- a/views/layout.pug
+++ b/views/layout.pug
@@ -31,7 +31,7 @@ html
 							li(class='active')
 								li: a(href='/player/list') Players
 								li: a(href='/cake/owes') Owes
-								// li: a(href='/match/list') Matches
 								li: a(href='/game/list') Games
+								li: a(href='/statistics/weekly') Weekly Stats
 			div(class='jumbotron')
 				block content
