--- a/public/css/site.css
+++ b/public/css/site.css
@@ -15,7 +15,6 @@ a:hover {
     display: block;
 }
 
-/* CSS Related to games page */
 #matches_list_table span {
     display: block;
 }
@@ -106,6 +105,12 @@ a:hover {
     padding: 10px;
 }
 #score_selector_table label {
+    display: block;
+    text-align: center;
+    border-radius: 0;
+    margin: 0;
+}
+#spectate_table label {
     display: block;
     text-align: center;
     border-radius: 0;
