--- a/public/css/site.css
+++ b/public/css/site.css
@@ -104,13 +104,7 @@ a:hover {
     line-height: 0.8;
     padding: 10px;
 }
-#score_selector_table label {
-    display: block;
-    text-align: center;
-    border-radius: 0;
-    margin: 0;
-}
-#spectate_table label {
+#score_selector_table label, #visits_table label {
     display: block;
     text-align: center;
     border-radius: 0;
@@ -172,4 +166,15 @@ a:hover {
 .mt-30
 {
     margin-top: 30px;
+}
+
+/* Background colors for dart containers */
+.dart-single {
+
+}
+.dart-double {
+    background-color: orange !important;
+}
+.dart-triple {
+    background-color: #d9534f !important;
 }
