--- a/views/match_spectate.pug
+++ b/views/match_spectate.pug
@@ -2,7 +2,8 @@ extends layout.pug
 
 block scripts
     script.
-        var match =!{JSON.stringify(match)}
+        var match = !{JSON.stringify(match)}
+        var playersMap = !{JSON.stringify(players)}
         $(function () {
             $(document).ready(function(){
                 var matchId = match.id;
@@ -38,6 +39,10 @@ block scripts
                         dart.css('background-color', 'black');
                     }
                     $('#total').text(data.score + parseInt($('#total').text()));
+
+                    // Update player score
+                    var playerScore = $('#player_id_' + data.current_player_id);
+                    playerScore.text(parseInt(playerScore.text()) - data.score);
                 });
 
                 socket.on('score_update', function(data) {
@@ -45,14 +50,78 @@ block scripts
                     for (key in players) {
                         var player = players[key];
                         $('#player_id_' + player.id).text(player.current_score);
+                        if (player.current) {
+                            $('#current_player').text(player.name);
+                        }
                     }
                     // Reset UI elements
                     $('#first').text('');
                     $('#second').text('');
                     $('#third').text('');
                     $('#total').text(0);
+
+                    // Update the visits table
+                    var visit = data.visits[data.visits.length - 1];
+                    var playerName = playersMap['p' + visit.player_id].name;
+                    var firstDartScore = getScoreString(visit.first_dart_multiplier, visit.first_dart);
+                    var firstDartCSS= getDartCSS(visit.first_dart_multiplier);
+                    var secondDartScore = getScoreString(visit.second_dart_multiplier, visit.second_dart);
+                    var secondDartCSS = getDartCSS(visit.second_dart_multiplier);
+                    var thirdDartScore = getScoreString(visit.third_dart_multiplier, visit.third_dart);
+                    var thirdDartCSS = getDartCSS(visit.third_dart_multiplier);
+                    var total = (visit.first_dart_multiplier * visit.first_dart ) + (visit.second_dart_multiplier * visit.second_dart) + (visit.third_dart_multiplier * visit.third_dart);
+                    var html = 
+                        "<tr>" +
+                            "<td>" + playerName + "</td>" +
+                            "<td class='dart-score-container no-border'><label class='btn-score " + firstDartCSS + "'>" + firstDartScore + "</label></td>" + 
+                            "<td class='dart-score-container no-border'><label class='btn-score " + secondDartCSS + "'>" + secondDartScore + "</label></td>" +
+                            "<td class='dart-score-container no-border'><label class='btn-score " + thirdDartCSS + "'>" + thirdDartScore + "</label></td>" +
+                            "<td><label>" + total + "</label></td>" + 
+                        "</tr>";
+                    $('#visits_table > tbody > tr:first').after(html);
                 });
+
+                // Reverse the rows in the table to show newest throws first
+                var tbody = $('#visits_table tbody');
+                tbody.html($('tr',tbody).get().reverse());
+              
+                // Add a row to the top of the table which contains the current throw for a given player
+                var html = 
+                    "<tr>" +
+                        "<td id='current_player'>" + playersMap['p' + match.current_player_id].name + "</td>" +
+                        "<td class='dart-score-container no-border'><label id='first' class='btn-score' text='0' data-multiplier='1' data-checkout='0'></label></td>" + 
+                        "<td class='dart-score-container no-border'><label id='second' class='btn-score' text='0' data-multiplier='1' data-checkout='0'></label></td>" +
+                        "<td class='dart-score-container no-border'><label id='third' class='btn-score' text='0' data-multiplier='1' data-checkout='0'></label></td>" +
+                        "<td><label id='total' text='0'>0</label></td>" + 
+                    "</tr>";
+                $('#visits_table').prepend(html);  
             });
+            function getDartCSS(multiplier) {
+                if (multiplier === 3) {
+                    return 'dart-triple';
+                }
+                else if (multiplier === 2) {
+                    return 'dart-double';
+                }
+                return 'dart-single';
+            }
+            function getScoreString(multiplier, score) {
+                if (score === 0) {
+                    return 'Miss';
+                }
+                
+                if (score === 25) {
+                    score = 'Bull';
+                }
+                if (multiplier === 3) {
+                    return 'T-' + score;
+                }
+                else if (multiplier === 2) {
+                    return 'D-' + score;
+                }
+                return score;
+            }
+
         });
 
 block content
@@ -60,7 +129,7 @@ block content
 
     h3 Players
     div(class='table-responsive')
-        table(class='table table-striped table-bordered')
+        table(class='table table-striped table-bordered' id='player_spectate_table')
             thead
                 tr
                     th Player
@@ -68,21 +137,66 @@ block content
             tbody
                 each player in players
                     tr
-                        td= player.name
-                        td(id='player_id_' + player.id)= player.current_score
+                        td: label(style='text-align: center;font-size: 1.5em;')= player.name + player.wins_string
+                        td(align='center'): label(id='player_id_' + player.id style='text-align: center;font-size: 1.5em;')= player.current_score
 
-    h3 Throws
+    h3 Visits
     div(class='table-responsive')
-        table(class='table table-striped table-bordered' id='spectate_table')
+        table(class='table table-striped table-bordered' id='visits_table')
             thead
                 tr
-                    th(colspan='2') First
-                    th(colspan='2') Second
-                    th(colspan='2') Third
+                    th Player
+                    th First
+                    th Second
+                    th Third
                     th Total
             tbody
-                tr
-                    td(colspan='2' class='dart-score-container no-border'): label(id='first' text='0' data-multiplier='1' data-checkout='0')
-                    td(colspan='2' class='dart-score-container no-border'): label(id='second' text='0' data-multiplier='1' data-checkout='0')
-                    td(colspan='2' class='dart-score-container no-border'): label(id='third' text='0' data-multiplier='1' data-checkout='0')
-                    td: label(id='total' text='0') 0
+                each visit in visits
+                    tr
+                        td= players['p' + visit.player_id].name
+                        td(class='dart-score-container no-border')
+                            if visit.first_dart_multiplier == 3
+                                label(class='btn-score dart-triple')= 'T-' + visit.first_dart
+                            else if visit.first_dart_multiplier == 2
+                                if visit.first_dart == 25
+                                    label(class='btn-score dart-double') Bull
+                                else
+                                    label(class='btn-score dart-double')= 'D-' + visit.first_dart
+                            else
+                                if visit.first_dart == 0
+                                    label(class='btn-score') Miss
+                                else if visit.first_dart == 25
+                                    label(class='btn-score') Bull
+                                else
+                                    label(class='btn-score')= visit.first_dart
+                        td(class='dart-score-container no-border')
+                            if visit.second_dart_multiplier == 3
+                                label(class='btn-score dart-triple')= 'T-' + visit.second_dart
+                            else if visit.second_dart_multiplier == 2
+                                if visit.second_dart == 25
+                                    label(class='btn-score dart-double') Bull
+                                else
+                                    label(class='btn-score dart-double')= 'D-' + visit.second_dart
+                            else
+                                if visit.second_dart == 0
+                                    label(class='btn-score') Miss
+                                else if visit.second_dart == 25
+                                    label(class='btn-score') Bull
+                                else
+                                    label(class='btn-score')= visit.second_dart
+                        td(class='dart-score-container no-border')
+                            if visit.third_dart_multiplier == 3
+                                label(class='btn-score dart-triple')= 'T-' + visit.third_dart
+                            else if visit.third_dart_multiplier == 2
+                                if visit.third_dart == 25
+                                    label(class='btn-score dart-double') Bull
+                                else
+                                    label(class='btn-score dart-double')= 'D-' + visit.third_dart
+                            else
+                                if visit.third_dart == 0
+                                    label(class='btn-score') Miss
+                                else if visit.third_dart == 25
+                                    label(class='btn-score') Bull
+                                else
+                                    label(class='btn-score')= visit.third_dart                        
+                        td: label= (visit.first_dart_multiplier * visit.first_dart ) + (visit.second_dart_multiplier * visit.second_dart) + (visit.third_dart_multiplier * visit.third_dart)
