--- a/views/match_socket.pug
+++ b/views/match_socket.pug
@@ -56,10 +56,10 @@ block scripts
                         }
 
                         if (!player.isBeerCheckoutSafe) {
-                            label.addClass('beer');
+                            td.addClass('beer');
                         }
                         else {
-                            label.removeClass('beer');
+                            td.removeClass('beer');
                         }
                         if (player.isViliusVisit) {
                             label.addClass('vilius');
