--- a/views/match_socket.pug
+++ b/views/match_socket.pug
@@ -62,10 +62,10 @@ block scripts
                             td.removeClass('beer');
                         }
                         if (player.isViliusVisit) {
-                            label.addClass('vilius');
+                            td.addClass('vilius');
                         }
                         else {
-                            label.removeClass('vilius');
+                            td.removeClass('vilius');
                         }
 
                         // Update the popover with First 9 and PPD
