--- a/views/layout.pug
+++ b/views/layout.pug
@@ -14,6 +14,16 @@ html
 		link(rel='stylesheet', href='/css/site.css')
 		script(src='https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.3/socket.io.js')
 		link(href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,700' rel='stylesheet')
+		script(src='/js/alertify.min.js')
+		link(rel='stylesheet' href='/css/alertify.min.css')
+		link(rel='stylesheet' href='/css/alertify.bootstrap.min.css')
+
+		script.
+			// Set alertify defaults for Boostrap theme
+			alertify.defaults.theme.ok = "btn btn-primary";
+			alertify.defaults.theme.cancel = "btn btn-basic";
+			alertify.defaults.theme.input = "form-control";
+
 		block scripts
 	body
 		div(class='container')
