Fixed cancelling of matches and games

--- a/views/match_socket.pug
+++ b/views/match_socket.pug
@@ -303,7 +303,7 @@ block scripts
                 }
                 executeDelete(window.location.pathname + '/cancel',
                     function (response) {
-                        location.href = '/match/list';
+                        location.href = '/game/list';
                     },
                     function (error) {
                         var alert = $('#cancelMatchFailedAlert');
